fixed scrollbar issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -226,27 +226,7 @@ h3 .char9 { transform: rotate(270deg); }
 	border-width: 2px;
 	border-style: solid;
 	border-color: #999;
-	overflow: hidden;
-}
-
-.mouseover:hover {
-	overflow-y: scroll !important;
-}
-
-.mouseover:hover::-webkit-scrollbar {
-    width: 10px;
-    background-color: rgba(0,0,0,0);
-}
-
-.mouseover:hover::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.2);
-	border-radius: 10px;
-}
-
-.mouseover:hover::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
-  outline: 1px solid slategrey;
-  border-radius: 10px;
+	overflow: scroll;
 }
 
 .content-about h1 {
